spotify-grid - fix link position on mobile

--- a/src/scss/spotify-grid.scss
+++ b/src/scss/spotify-grid.scss
@@ -12,7 +12,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    grid-column-end: 3;
+
+    @media (min-width: 768px) {
+        grid-column-end: 3;
+    }
 }
 
 .spotify-grid__item {
