--- a/src/scss/youtube-poster.scss
+++ b/src/scss/youtube-poster.scss
@@ -21,7 +21,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     font-size: 22px;
     text-shadow: 0 0 0.3em #000000de;
 
